Bug 340510 - "nsIDOMNSDocument.getBoxObjectFor (standard way to use Mozilla) does not work with --disable-xul" [p=romaxa@gmail.com (romaxa) r+sr=roc a1.9=schrep]