dom/public/nsDOMClassInfoID.h
@@ -178,8 +178,8 @@ enum nsDOMClassInfoID {
   eDOMClassInfo_XULCommandDispatcher_id,
 #endif
   eDOMClassInfo_XULControllers_id,
-#ifdef MOZ_XUL
   eDOMClassInfo_BoxObject_id,
+#ifdef MOZ_XUL
   eDOMClassInfo_TreeSelection_id,
   eDOMClassInfo_TreeContentView_id,
 #endif
